--- a/style.css
+++ b/style.css
@@ -4,17 +4,21 @@
     box-sizing: border-box;
 }
 
+html{
+    font-size: 62.5%;
+}
+
 body{
     background: darkslategray;
 }
 
 .card{
     width: 90%;
-    max-width: 470px;
+    max-width: 47rem;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    margin: 100px auto 0;
-    padding: 40px 35px;
+    margin: 10rem auto 0;
+    padding: 4rem 3.5rem;
     border-radius: 20px;
     text-align: center;
 }
@@ -32,11 +36,11 @@ body{
     background: #ebfffc;
     color: #555;
     flex: 1;
-    height: 50px;
-    padding: 10px 20px;
-    border-radius: 30px;
-    margin-right: 16px;
-    font-size: 18px;
+    height: 5rem;
+    padding: 1rem 2rem;
+    border-radius: 3rem;
+    margin-right: 1.6rem;
+    font-size: 1.8rem;
 }
 
 .search button{
@@ -44,33 +48,33 @@ body{
     outline: none;
     background: #ebfffc;
     border-radius: 50%;
-    padding: 8px;
+    padding: .8rem;
     cursor: pointer;
 }
 
 .search i{
-    font-size: 32px;
+    font-size: 3.2rem;
 }
 .weather_icon{
-    width: 170px;
-    margin: 30px auto 0;
+    width: 17rem;
+    margin: 3rem auto 0;
 }
 
 .weather h1{
-    font-size: 80px;
+    font-size: 8rem;
     font-weight: 600;
 }
 .weather h2{
-    font-size: 50px;
+    font-size: 5rem;
     font-weight: 600;
-    margin-top: -10px;
+    margin-top: -1rem;
 }
 .details{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 50px;
-    padding: 0 25px;
+    margin-top: 5rem;
+    padding: 0 2.5rem;
 }
 
 .col{
@@ -79,10 +83,10 @@ body{
     text-align: left;
 }
 .col img{
-    width: 40px;
-    margin-right: 10px;
+    width: 4rem;
+    margin-right: 1rem;
 }
 
 .humidity, .wind{
-    font-size: 25px;
+    font-size: 2.5rem;
 }
